Updated the merging/consensus calling module.

--- a/INSTALL
+++ b/INSTALL
@@ -2,6 +2,6 @@ change in the Debug directory.
 type:
 	make
 
-you should find an executable in the same director.
+you should find an executable in the same directory.
 If you have problems please let me know:
-fritz.sedlazeck@gmail.cohould find an executable in the same director.
+fritz.sedlazeck@gmail.com
